--- a/poc/src/main/resources/org/epa/mda/poc/SRA_Assign_Ticket-taskform.form
+++ b/poc/src/main/resources/org/epa/mda/poc/SRA_Assign_Ticket-taskform.form
@@ -16,7 +16,7 @@
 </field>
 <field position="1" name="company_name" type="InputText" id="464525377">
 <property name="fieldRequired" value="false"/>
-<property name="label" value="quot;SSClassquot;,quot;quot;quot;SSStylequot;,quot;quot;quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;name (company)quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="label" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;name (company)quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
 <property name="errorMessage" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
 <property name="title" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
 <property name="readonly" value="true"/>
@@ -27,13 +27,34 @@
 </field>
 <field position="2" name="company_address" type="InputText" id="1293000650">
 <property name="fieldRequired" value="false"/>
-<property name="label" value="quot;SSClassquot;,quot;quot;quot;SSStylequot;,quot;quot;quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;address (company)quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="label" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;address (company)quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
 <property name="errorMessage" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
 <property name="title" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
 <property name="readonly" value="true"/>
 <property name="isHTML" value="false"/>
 <property name="hideContent" value="false"/>
 <property name="inputBinding" value="companyIn/address"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="3" name="company_city" type="InputText" id="340670508">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;city (company)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="companyIn/city"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="4" name="company_state" type="InputText" id="1136279135">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;state (company)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="companyIn/state"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="5" name="company_zip" type="InputText" id="1203170732">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;zip (company)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="companyIn/zip"/>
 <property name="fieldClass" value="java.lang.String"/>
 </field>
 <dataHolder inputId="companyIn" name="#E9E371" type="dataModelerEntry" outId="" value="org.epa.mda.poc.Company" id="company"/>
